configure lid behaviour when docked

--- a/assets/hyprland.conf
+++ b/assets/hyprland.conf
@@ -16,8 +16,9 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 #monitor = ,preferred,auto,auto
-monitor = DP-3,5120x1440@240,0x0,1,vrr,1
-monitor = eDP-1,highres,5120x0,1.6
+monitor = DP-3,5120x1440@240,-5120x0,1,vrr,1
+monitor = eDP-1,highres,0x0,1.6
+
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
