--- a/assets/keybindings.conf
+++ b/assets/keybindings.conf
@@ -156,6 +156,6 @@ bind = $mainMod ALT, 9, movetoworkspacesilent, 9
 bind = $mainMod ALT, 0, movetoworkspacesilent, 10
 
 # trigger when the switch is turning on
-bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1,highres,0x0, 1.6"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1,highres,0x0, 1.6"
 # trigger when the switch is turning off
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
+bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
