--- a/local.yaml
+++ b/local.yaml
@@ -96,7 +96,14 @@
         - starship
         - gamemode
         - lib32-gamemode
+        - piper
       state: present
+  - name: Install ratbagd
+    community.general.pacman:
+      name:
+        - libratbag
+      state: present
+    notify: Reload dbus
   - name: Install AUR packages
     become: yes
     become_user: "{{ user }}"
@@ -137,6 +144,11 @@
     notify: Reload systemd logind service
   
   handlers:
+  - name: Reload dbus
+    ansible.builtin.systemd_service:
+      state: restarted
+      daemon_reload: true
+      name: dbus
   - name: Reload systemd logind service
     ansible.builtin.systemd_service:
       state: restarted
